Fix button design on safari

--- a/src/stylesheets/layout.css
+++ b/src/stylesheets/layout.css
@@ -3,6 +3,7 @@ body {
 	flex-direction: column;
 	align-items: center;
 	font-family: Arial, Helvetica, sans-serif;
+	color: #000000;
 }
 
 .title {
@@ -14,12 +15,15 @@ body {
 }
 
 button {
+	color: #000000;
 	background-color: #FFFFFF;
 	padding: 10px 15px;
 	font-size: 20px;
 	line-height: 20px;
 	border: 1px solid #959595;
 	border-radius: 10px;
+	width: 100%;
+	height: 100%;
 }
 
 .button-wrapper {
