--- a/src/stylesheets/reset.css
+++ b/src/stylesheets/reset.css
@@ -42,6 +42,7 @@ table {
 	border-spacing: 0;
 }
 *:focus {
+	color: #000000;
 	outline: none;
 }
 button:active {
